Fixed spacing in header

--- a/style.css
+++ b/style.css
@@ -25,11 +25,11 @@ body::-webkit-scrollbar{
     display: flex;
     /* justify-content: space-between; */
     width: 100%;
-    height: 8.3vh;
+    height: 5vh;
     /* padding: 10px 0; */
     background-color: #181925;
     align-items: center;
-    font-size: 36px;
+    font-size: 30px;
 }
 
 .header-item {
@@ -37,22 +37,34 @@ body::-webkit-scrollbar{
     align-items: right;
     margin: 0 1.25vw;
     background-color: transparent;
+    transition: all 0.2s ease;
+}
+.header-item:hover {
+    color: rgba(199, 207, 242, 0.6);
 }
 
 
 .windows-buttons{
     width: 100%;
-    justify-content: right;
-    background-color: red;
+    display: flex;
+    justify-content: flex-end;
+    /* background-color: red; */
 }
 
 .windows-button{
     cursor: pointer;
     align-items: middle;
-    margin-left: 2vw;
+    padding: 0.75vw;
+    height: 5vh;
+    /* margin-left: 0.5vw; */
     background-color: transparent;
     color: #BC9DE9;
     border: none;
+    /* border-radius: 10px; */
+    transition: all 0.3s ease; 
+}
+.windows-button:hover{
+    background-color: #343a4f;
 }
 
 .title {
@@ -178,7 +190,7 @@ body::-webkit-scrollbar{
     /* flex: 1; */
     justify-content: space-around;
     align-items: center;
-    gap: 2.5vh;
+    gap: 3vh;
     color: #C7CFF2;
     /* border: 1px solid red; */
     font-weight: bold;
@@ -195,6 +207,6 @@ body::-webkit-scrollbar{
     transition: background-color 0.3s;
 }
 
-.service-button:hover, .add-file-button:hover {
+.add-file-button:hover {
     background-color: #343a4f;
 }
